# AlgoTrading

./: RSConn.py  controller.py  example.py  market.py  robinConfig.py  run.py  strategy.py
Trader/: .gitignore  MULTI_SIGNAL_STRATEGY_PLAN.md  README.md  RESEARCH_AUDIT_TRACKER.md  RESEARCH_LOOP_OPTIMIZATION_PLAN.md  RESEARCH_LOOP_OPTIMIZATION_PLAN_FOLLOW_UP.md  __main__.py  backtest.py  config.py  ingest.py  massive_client.py  models.py  pyproject.toml  storage.py  visualize.py
Trader/md_archive/: AUTORESEARCH_PLAN.md  RESEARCH_AUDIT_TRACKER.md  RESEARCH_LOOP_OPTIMIZATION_COMPLETED_ITEMS.md  RESEARCH_LOOP_OPTIMIZATION_PLAN.md
Trader/tests/: conftest.py  test_backtest_regression.py  test_baselines.py  test_composite_signal.py  test_confirmation_filters.py  test_costs.py  test_critic_memory.py  test_data_quality.py  test_decay_monitor.py  test_decisions.py  test_execution_engine.py  test_feature_primitives.py  test_holdout.py  test_indicator_cache.py  test_leakage.py  test_ledger.py  test_loop_cmd.py  test_multi_signal.py  test_paper_data_integrity.py  test_paper_risk.py  test_paper_trading.py  test_planner.py  test_predicates.py  test_promotion.py  test_regime_filters.py  test_reports_cmd.py  test_research_queue.py  test_robustness.py  test_run_dashboard.py  test_splits_metrics_registry.py  test_storage.py  test_suppressor.py  test_trade_visualization.py  test_vwap_deviation.py
Trader/trader/: __init__.py  __main__.py  backtest.py  config.py
Trader/trader/artifacts/: __init__.py  store.py
Trader/trader/cli/: __init__.py  eval_cmd.py  ingest_cmd.py  ledger_cmd.py  (+4 more)
(+84 files in other folders)
