[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trader"
version = "0.1.0"
description = "Deterministic-first autonomous SPY research system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "massive",
    "optuna>=3.6",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
trader = "trader.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["trader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
